﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.2.x
------------------------------------------------------------------------------------------------------------------------

CONFIG
	Added: /dev/random and /dev/urandom to open_basedir (PHP)

FRONTEND
	Fixed: Exception raised due to missing `ZIP` configuration variable

PACKAGES
	Fixed: Global symbol "$rs" requires explicit package name at Package/Webstats/Awstats/Uninstaller.pm line 103

SETUP
	Fixed: Could not reconfigure due to 'Could not find sysvinit script...' error

SERVERS
	Fixed: MySQL server socket is missing after reboot due to underlying init script

INSTALLER
	Fixed: Could not unset 'hold' state on packages in some contexts
	Fixed: Ensure that underlying sysvinit scripts are disabled when upstart job is provided (Upstart)
	Fixed: Mitigate possible PHP timezone warning with CLI SAPI
	Fixed: Wrong package name (mysql-client-5.5 instead of mysql-client-5.6) in Debian Stretch packages file
	Pending: VsFTPd support for Debian Stretch - libpam-mysql package not available at this moment

------------------------------------------------------------------------------------------------------------------------
1.2.15
------------------------------------------------------------------------------------------------------------------------

2016-03-02: Laurent Declercq
	RELEASE i-MSCP 1.2.15

BACKEND
	Changed: Usage of custom OpenSSL configuration file for self-signed SSL certificates (iMSCP::OpenSSL)
	Fixed: ALLOW_URL_FOPEN placeholder not replaced in pool configuration files when using per_domain INI level (PHP-FPM)
	Fixed: Exit code not returned to caller on segfault (signal 11)
	Fixed: Missing fallback value for allow_url_fopen in Modules::SubAlias
	Fixed: Obsolete SSL connection encryption method (nginx)

CONFIG
	Added: imscp_panel.service systemd unit file