@@ -71,7 +71,7 @@ sub process
 	return $rs if $rs;
 
 	my @sql;
-	if($self->{'status'} ~~ ['toadd', 'tochange']) {
+	if($self->{'status'} ~~ [ 'toadd', 'tochange' ]) {
 		$rs = $self->add();
 		@sql = (
 			'UPDATE ssl_certs SET status = ? WHERE cert_id = ?',
@@ -92,7 +92,10 @@ sub process
 		return 1;
 	}
 
-	$rs;
+	# (since 1.2.16 - See #IP-1500)
+	# Return 0 to avoid any failure on update when a customer's SSL certificate is expired or invalid.
+	# It is the customer responsability to update the certificate throught his interface
+	0;
 }
 
 =item add()
@@ -128,7 +131,7 @@ sub add
 		'certificate_chain_name' => $self->{'domain_name'},
 		'private_key_container_path' => $privateKeyContainer,
 		'certificate_container_path' => $certificateContainer,
-		'ca_bundle_container_path' => (defined $caBundleContainer) ? $caBundleContainer : ''
+		'ca_bundle_container_path' => defined $caBundleContainer ? $caBundleContainer : ''
 	);
 
 	# Check certificate chain
@@ -229,7 +232,7 @@ sub _loadData
 
 	unless(exists $rdata->{$self->{'domain_id'}}) {
 		error(sprintf('SSL certificate with ID %s has not been found or is in an inconsistent state', $certificateId));
-    	return 1;
+		return 1;
 	}
 
 	$self->{'domain_name'} = $rdata->{$self->{'domain_id'}}->{'domain_name'};
