@@ -9,7 +9,8 @@
         <th>{TR_CREATE_DATE}</th>
         <th>{TR_EXPIRE_DATE}</th>
         <th>{TR_STATUS}</th>
-        <th>{TR_CERT}</th>
+        <th>{TR_SSL_STATUS}</th>
+        <th>{TR_ACTIONS}</th>
     </tr>
     </thead>
     <tbody>
@@ -28,6 +29,7 @@
         <td>{DOMAIN_CREATE_DATE}</td>
         <td>{DOMAIN_EXPIRE_DATE}</td>
         <td>{DOMAIN_STATUS}</td>
+        <td>{DOMAIN_SSL_STATUS}</td>
         <td><a href="{CERT_SCRIPT}" class="icon i_edit" title="{VIEW_CERT}">{VIEW_CERT}</a></td>
     </tr>
     <!-- EDP: domain_item -->
@@ -48,7 +50,7 @@
         <th>{TR_MOUNT}</th>
         <th>{TR_REDIRECT}</th>
         <th>{TR_STATUS}</th>
-        <th>{TR_CERT}</th>
+        <th>{TR_SSL_STATUS}</th>
         <th>{TR_ACTIONS}</th>
     </tr>
     </thead>
@@ -66,8 +68,9 @@
         <td>{ALS_MOUNT}</td>
         <td>{ALS_REDIRECT}</td>
         <td>{ALS_STATUS}</td>
-        <td><a href="{CERT_SCRIPT}" class="icon i_edit" title="{VIEW_CERT}">{VIEW_CERT}</a></td>
+        <td>{ALS_SSL_STATUS}</td>
         <td>
+            <a href="{CERT_SCRIPT}" class="icon i_edit" title="{VIEW_CERT}">{VIEW_CERT}</a>
             <a class="icon i_edit" href="{ALS_EDIT_LINK}" title="{ALS_EDIT}">{ALS_EDIT}</a>
             <a class="icon i_delete" href="{ALS_ACTION_SCRIPT}" onclick="return action_delete('{ALS_ACTION_SCRIPT}', 'als');" title="{ALS_ACTION}">{ALS_ACTION}</a>
         </td>
@@ -91,7 +94,7 @@
         <th>{TR_MOUNT}</th>
         <th>{TR_REDIRECT}</th>
         <th>{TR_STATUS}</th>
-        <th>{TR_CERT}</th>
+        <th>{TR_SSL_STATUS}</th>
         <th>{TR_ACTIONS}</th>
     </tr>
     </thead>
@@ -111,8 +114,9 @@
         <td>{SUB_MOUNT}</td>
         <td>{SUB_REDIRECT}</td>
         <td>{SUB_STATUS}</td>
-        <td><a href="{CERT_SCRIPT}" class="icon i_edit" title="{VIEW_CERT}">{VIEW_CERT}</a></td>
+        <td>{SUB_SSL_STATUS}</td>
         <td>
+            <a href="{CERT_SCRIPT}" class="icon i_edit" title="{VIEW_CERT}">{VIEW_CERT}</a>
             <a class="icon i_edit" href="{SUB_EDIT_LINK}" title="{SUB_EDIT}">{SUB_EDIT}</a>
             <a class="icon i_delete" href="{SUB_ACTION_SCRIPT}" onclick="return action_delete('{SUB_ACTION_SCRIPT}', 'sub');">{SUB_ACTION}</a>
         </td>
