@@ -8,7 +8,9 @@ CONFIG
 	Added: /dev/random and /dev/urandom to open_basedir (PHP)
 
 FRONTEND
+	Added: SSL status filed on domain management page (Client interface)
 	Fixed: Exception raised due to missing `ZIP` configuration variable
+	Fixed: Wrong error handling in cert_view.php (openssl_x509_checkpurpose function aslo returns -1 which is not FALSE)
 
 PACKAGES
 	Fixed: Global symbol "$rs" requires explicit package name at Package/Webstats/Awstats/Uninstaller.pm line 103
@@ -25,6 +27,10 @@ INSTALLER
 	Fixed: Mitigate possible PHP timezone warning with CLI SAPI
 	Fixed: Wrong package name (mysql-client-5.5 instead of mysql-client-5.6) in Debian Stretch packages file
 	Pending: VsFTPd support for Debian Stretch - libpam-mysql package not available at this moment
+
+YOUTRACK
+	IP-1488 Show SSL-status on domain page
+	IP-1500 Update fails when a customer's SSL certificate is invalid or expired
 
 ------------------------------------------------------------------------------------------------------------------------
 1.2.15
